# sibylsat

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  makefile
lib/uwrmaxsat/: fetch_and_build.sh  uwrmaxsat_modifications.patch
scripts/: confirm_clauses_match_main.py  confirm_ok.py  ordering_vizualizer.py
src/: fetch_and_build_grounder.sh  fetch_and_build_parser.sh  libpanda.hpp  main.cpp  pandaPIparser_deordering.patch  pandaPiGrounding_modifications.patch  panda_makefile
src/algo/: arg_iterator.cpp  arg_iterator.h  fact_analysis.cpp  fact_analysis.h  instantiator.cpp  network_traversal.cpp  plan_writer.cpp  planner.cpp  planner.h  planner_expansion.cpp  precondition_inference.h  retroactive_pruning.cpp  retroactive_pruning.h  separate_tasks_scheduler.cpp  separate_tasks_scheduler.h  tree_expander.cpp  tree_expander.h
src/data/: htn_instance.cpp  htn_instance.h  layer.cpp  layer.h  position.cpp  position.h  reduction.cpp  sas_plus.cpp  sas_plus.h  signature.cpp  signature.h  tdg.cpp  tdg.h
src/deorder/: deorder.cpp  deorder.h
src/deorder/algo/: deorder_algo.cpp  deorder_algo.h  deorder_algo_PRF.cpp  deorder_algo_PRF.h  deorder_algo_SAT.cpp  deorder_algo_SAT.h
src/sat/: binary_amo.h  decoder.h  encoding.cpp  encoding.h  encoding_statistics.h  ipamir.h  literal_tree.h  plan_optimizer.cpp  plan_optimizer.h  sat_interface.h  variable_domain.cpp  variable_domain.h  variable_provider.h
src/util/: bitvec.h  domain_settings_manager.h  json.hpp  log.cpp  log.h  params.cpp  project_utils.cpp  project_utils.h  robin_hood.h  statistics.h  string_util.h
